# Android-Offline-Meeting-Recorder

./: README.md  settings.gradle.kts
app/src/androidTest/java/com/yamanobora/offlinerecorder/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  native_bridge.cpp  whisper_jni.cpp
app/src/main/cpp/cpp-master/src/: whisper.cpp
app/src/main/java/com/yamanobora/offlinerecorder/: DetailActivity.java  LLMWrapper.java  MainActivity.java  MeetingAdapter.java  MeetingListActivity.java  MeetingRecord.java  MeetingStorage.java  RecordingSession.java  SpeechBlock.java  WaveformView.kt  WhisperBridge.kt
app/src/main/java/com/yamanobora/offlinerecorder/audio/: SegmentedRecorder.kt
app/src/main/java/com/yamanobora/offlinerecorder/summarizer/: AiSummarizer.java  HybridSummarizer.java  MeetingSummarizer.java  RuleBasedSummarizer.java  Summarizer.java  SummaryMode.java
app/src/main/java/com/yamanobora/offlinerecorder/utils/: AssetUtils.java
app/src/test/java/com/yamanobora/offlinerecorder/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts
lib/src/main/cpp/: CMakeLists.txt
